Fixed the overflow in the screen when inputing multiple digits

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
 }
 
 .screen {
+    overflow:auto;
     color: black;  
     font-size: 50px;
     font-family: 'Calculator', sans-serif;
